<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/dashboard"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/dashboard" />

        <item
            android:id="@+id/news_feed"
            android:checked="false"
            android:icon="@drawable/ic_delete_black"
            android:title="@string/news_feed" />

    </group>

    <item android:title="Academics">
        <menu>
            <item
                android:id="@+id/teachers"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/teachers" />
            <item
                android:id="@+id/students"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/student" />

            <item
                android:id="@+id/classes"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/classes" />

        </menu>
    </item>

    <item android:title="Others">
        <menu>
            <item
                android:id="@+id/staff"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/staff" />

            <item
                android:id="@+id/calender"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/calender" />
            <item
                android:id="@+id/events"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/events" />

            <item
                android:id="@+id/gallery"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/gallery" />

            <item
                android:id="@+id/forms"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/forms" />

            <item
                android:id="@+id/lost_n_found"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/lost_n_found" />
        </menu>
    </item>


    <item android:title="Settings">
        <menu>
            <item
                android:id="@+id/advertise"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/advertise" />
            <item
                android:id="@+id/contact_us"
                android:icon="@drawable/ic_delete_black"
                android:title="@string/contact_us" />
        </menu>
    </item>
</menu>